fix: Resolve API key leak and fix GitHub Actions workflow
- Remove hardcoded Firebase API key from sentiment.html and integrate with Firebase Hosting's auto-config.
- Fix GitHub Actions workflow failure by creating requirements.txt and ensuring all dependencies (including Flask) are installed.
- Update workflow to call the update script correctly without hanging.

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -16,8 +16,8 @@ jobs:
           python-version: '3.9'
       - name: Install dependencies
         run: |
-          pip install firebase-admin fear-and-greed
+          pip install -r requirements.txt
       - name: Run script
         env:
           FIREBASE_KEY: ${{ secrets.FIREBASE_KEY }}
-        run: python main.py
+        run: python -c 'from main import update_fng; update_fng()'
