--- a/.github/workflows/update_k_index.yml
+++ b/.github/workflows/update_k_index.yml
@@ -2,8 +2,9 @@ name: Update Korea Fear and Greed Index
 
 on:
   schedule:
-    # 한국 시간 기준 매일 밤 12시 10분 (UTC 15:10)
-    - cron: '10 15 * * *'
+    # 한국 시간 기준 오전 10시 (UTC 1:00), 오후 2시 (UTC 5:00)
+    - cron: '0 1 * * *'
+    - cron: '0 5 * * *'
   workflow_dispatch: # 수동 실행 버튼 생성
 
 jobs:
