--- a/.github/workflows/update_k_index.yml
+++ b/.github/workflows/update_k_index.yml
@@ -1,4 +1,4 @@
-name: Update Korea Fear and Greed Index
+name: Update Korea Fear and Greed Index and Gemini Advisor
 
 on:
   schedule:
@@ -23,11 +23,79 @@ jobs:
         run: |
           pip install pykrx finance-datareader beautifulsoup4 lxml requests firebase-admin pandas
 
-      # - name: Print korea_fear_greed.py content # KRX API 키 추가를 위해 제거
-      #   run: cat korea_fear_greed.py
-
       - name: Run Python script
+        id: run_python_script # Added ID to reference outputs
         env:
           FIREBASE_KEY: ${{ secrets.FIREBASE_KEY }}
           KRX_API_KEY: ${{ secrets.KRX_API_KEY }} # KRX API 키 환경 변수 추가
         run: python korea_fear_greed.py
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+
+      - name: Generate Gemini Report
+        env:
+          GEMINI_API_KEY: ${{ secrets.GEMINI_INDEX_ADVISOR_KEY }}
+          ADVISOR_DATA: ${{ steps.run_python_script.outputs.advisor_data }} # Pass data from Python script
+        run: |
+          node -e "
+          const fs = require('fs');
+          async function generate() {
+            const advisorDataRaw = process.env.ADVISOR_DATA;
+            let advisorData;
+            try {
+              advisorData = JSON.parse(advisorDataRaw);
+            } catch (e) {
+              console.error('Error parsing ADVISOR_DATA:', e);
+              console.error('Raw ADVISOR_DATA:', advisorDataRaw);
+              process.exit(1);
+            }
+
+            let promptTemplate = fs.readFileSync('advisor_set.txt', 'utf-8');
+            
+            // Replace placeholders
+            promptTemplate = promptTemplate.replace('(1번 지표 값)', advisorData.individual_scores[0] !== undefined ? advisorData.individual_scores[0].toFixed(2) : 'N/A');
+            promptTemplate = promptTemplate.replace('(2번 지표 값)', advisorData.individual_scores[1] !== undefined ? advisorData.individual_scores[1].toFixed(2) : 'N/A');
+            promptTemplate = promptTemplate.replace('(3번 지표 값)', advisorData.individual_scores[2] !== undefined ? advisorData.individual_scores[2].toFixed(2) : 'N/A');
+            promptTemplate = promptTemplate.replace('(4번 지표 값)', advisorData.individual_scores[3] !== undefined ? advisorData.individual_scores[3].toFixed(2) : 'N/A');
+            promptTemplate = promptTemplate.replace('(5번 지표 값)', advisorData.individual_scores[4] !== undefined ? advisorData.individual_scores[4].toFixed(2) : 'N/A');
+            promptTemplate = promptTemplate.replace('(코스피 값)', advisorData.kospi_value !== undefined ? advisorData.kospi_value.toFixed(2) : 'N/A');
+            promptTemplate = promptTemplate.replace('(코스피 등락률)', advisorData.kospi_change_rate !== undefined ? advisorData.kospi_change_rate.toFixed(2) : 'N/A');
+            promptTemplate = promptTemplate.replace('(코스피 등락 포인트)', advisorData.kospi_change_point !== undefined ? advisorData.kospi_change_point.toFixed(2) : 'N/A');
+
+            const prompt = promptTemplate;
+
+            console.log('Sending prompt to Gemini API:');
+            console.log(prompt);
+
+            const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=' + process.env.GEMINI_API_KEY, {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({ contents: [{ parts: [{ text: prompt }] }] })
+            });
+            if (!response.ok) {
+              console.error('API request failed:', response.status, response.statusText);
+              const errorBody = await response.text();
+              console.error('Error body:', errorBody);
+              process.exit(1);
+            }
+            const json = await response.json();
+            if (!json.candidates || !json.candidates[0].content || !json.candidates[0].content.parts || !json.candidates[0].content.parts[0].text) {
+              console.error('Invalid API response:', JSON.stringify(json, null, 2));
+              process.exit(1);
+            }
+            const html = json.candidates[0].content.parts[0].text.replace(/\\\`\\\`\\\`html|\\\`\\\`\\\`/g, '');
+            fs.writeFileSync('public/gemini_adv.html', html);
+          }
+          generate();
+          "
+
+      - name: Commit and Push changes
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add public/gemini_adv.html
+          git commit -m "Auto-update Gemini advisor report: $(date +'%Y-%m-%d')" || exit 0
+          git push
