--- a/.github/workflows/update_k_index.yml
+++ b/.github/workflows/update_k_index.yml
@@ -70,15 +70,17 @@ jobs:
             console.log('Sending prompt to Gemini API:');
             console.log(prompt);
 
-            const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=' + process.env.GEMINI_API_KEY, {
+            const url = `https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=${process.env.GEMINI_API_KEY}`;
+            const response = await fetch(url, {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
               body: JSON.stringify({ contents: [{ parts: [{ text: prompt }] }] })
             });
+
             if (!response.ok) {
+              const errorData = await response.json();
               console.error('API request failed:', response.status, response.statusText);
-              const errorBody = await response.text();
-              console.error('Error body:', errorBody);
+              console.error('상세 에러 내용:', JSON.stringify(errorData, null, 2));
               process.exit(1);
             }
             const json = await response.json();
