--- a/.github/workflows/update_k_index.yml
+++ b/.github/workflows/update_k_index.yml
@@ -37,6 +37,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add public/gemini_adv.html
-          git commit -m "Auto-update Gemini advisor report: $(date +'%Y-%m-%d')" || exit 0
+          git add public/gemini_adv.html public/gemini_adv_ko_en.html
+          git commit -m "Auto-update Gemini advisor report (Bilingual): $(date +'%Y-%m-%d')" || exit 0
           git push
