--- a/.github/workflows/update_k_index.yml
+++ b/.github/workflows/update_k_index.yml
@@ -2,9 +2,8 @@ name: Update Korea Fear and Greed Index and Gemini Advisor
 
 on:
   schedule:
-    # 한국 시간 기준 오전 11시 (UTC 2:00), 오후 3시 (UTC 6:00)
-    - cron: '0 2 * * *'
-    - cron: '0 6 * * *'
+    # 한국 시간 기준 오전 10시 10분(UTC 1:10)
+    - cron: '10 1 * * *'
   workflow_dispatch: # 수동 실행 버튼 생성
 
 jobs:
