--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -28,4 +28,5 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add public/gemini_snp_adv.html public/gemini_snp_adv_ko_en.html
           git commit -m "Auto-update US Gemini advisor report: $(date +'%Y-%m-%d')" || exit 0
+          git pull --rebase
           git push
