--- a/.github/workflows/update_k_index.yml
+++ b/.github/workflows/update_k_index.yml
@@ -38,4 +38,5 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add public/gemini_adv.html public/gemini_adv_ko_en.html
           git commit -m "Auto-update Gemini advisor report (Bilingual): $(date +'%Y-%m-%d')" || exit 0
+          git pull --rebase
           git push
